refactor(asset-scan-scanners): rootkit scanner
